// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StructuredText simple dast /2 with default rules renders the document 1`] = `
VueWrapper {
  "__app": Object {
    "_component": Object {
      "__emits": null,
      "__props": Array [
        Object {},
        Array [],
      ],
      "name": "VTU_ROOT",
      "render": [Function],
    },
    "_container": <div
      data-v-app=""
    >
      <div>
        <h1>
          This
          <br>
            <!---->
          </br>
          is a
          <br>
            <!---->
          </br>
          title!
        </h1>
        <pre
          data-language="javascript"
        >
          <code>
            function greetings() {
  console.log('Hi!');
}
          </code>
        </pre>
      </div>
    </div>,
    "_context": Object {
      "app": [Circular],
      "components": Object {
        "transition": Object {
          "name": "transition",
          "props": undefined,
          "render": [Function],
        },
        "transition-group": Object {
          "name": "transition-group",
          "props": undefined,
          "render": [Function],
        },
      },
      "config": Object {
        "errorHandler": undefined,
        "globalProperties": Object {},
        "isCustomElement": [Function],
        "isNativeTag": [Function],
        "optionMergeStrategies": Object {},
        "performance": false,
        "warnHandler": undefined,
      },
      "directives": Object {},
      "mixins": Array [
        Object {
          "__emits": null,
          "__props": Array [],
          "beforeCreate": [Function],
        },
      ],
      "provides": Object {},
      "reload": [Function],
    },
    "_props": null,
    "_uid": 1,
    "component": [Function],
    "config": Object {
      "errorHandler": undefined,
      "globalProperties": Object {},
      "isCustomElement": [Function],
      "isNativeTag": [Function],
      "optionMergeStrategies": Object {},
      "performance": false,
      "warnHandler": undefined,
    },
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.0.11",
  },
  "__setProps": [Function],
  "componentVM": Object {
    "customRules": undefined,
    "data": Object {
      "document": Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "span",
                "value": "This
is a
title!",
              },
            ],
            "level": 1,
            "type": "heading",
          },
          Object {
            "code": "function greetings() {
  console.log('Hi!');
}",
            "highlight": Array [
              1,
            ],
            "language": "javascript",
            "type": "code",
          },
        ],
        "type": "root",
      },
      "schema": "dast",
    },
    "hasOwnProperty": [Function],
    "metaTransformer": undefined,
    "renderBlock": undefined,
    "renderFragment": undefined,
    "renderInlineRecord": undefined,
    "renderLinkToRecord": undefined,
    "renderNode": undefined,
    "renderText": undefined,
  },
  "rootVM": Object {},
  "wrapperElement": <div>
    <h1>
      This
      <br>
        <!---->
      </br>
      is a
      <br>
        <!---->
      </br>
      title!
    </h1>
    <pre
      data-language="javascript"
    >
      <code>
        function greetings() {
  console.log('Hi!');
}
      </code>
    </pre>
  </div>,
}
`;

exports[`StructuredText simple dast with no links/blocks with custom rules renders the document 1`] = `
VueWrapper {
  "__app": Object {
    "_component": Object {
      "__emits": null,
      "__props": Array [
        Object {},
        Array [],
      ],
      "name": "VTU_ROOT",
      "render": [Function],
    },
    "_container": <div
      data-v-app=""
    >
      <div>
        <h2>
          That!!
          <br>
            <!---->
          </br>
          is a!!
          <br>
            <!---->
          </br>
          title!!!
        </h2>
        <pre
          data-language="javascript"
        >
          <code>
            function greetings() {
  console.log('Hi!');
}!!
          </code>
        </pre>
      </div>
    </div>,
    "_context": Object {
      "app": [Circular],
      "components": Object {
        "transition": Object {
          "name": "transition",
          "props": undefined,
          "render": [Function],
        },
        "transition-group": Object {
          "name": "transition-group",
          "props": undefined,
          "render": [Function],
        },
      },
      "config": Object {
        "errorHandler": undefined,
        "globalProperties": Object {},
        "isCustomElement": [Function],
        "isNativeTag": [Function],
        "optionMergeStrategies": Object {},
        "performance": false,
        "warnHandler": undefined,
      },
      "directives": Object {},
      "mixins": Array [
        Object {
          "__emits": null,
          "__props": Array [],
          "beforeCreate": [Function],
        },
      ],
      "provides": Object {},
      "reload": [Function],
    },
    "_props": null,
    "_uid": 3,
    "component": [Function],
    "config": Object {
      "errorHandler": undefined,
      "globalProperties": Object {},
      "isCustomElement": [Function],
      "isNativeTag": [Function],
      "optionMergeStrategies": Object {},
      "performance": false,
      "warnHandler": undefined,
    },
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.0.11",
  },
  "__setProps": [Function],
  "componentVM": Object {
    "customRules": Array [
      Object {
        "appliable": [Function],
        "apply": [Function],
      },
    ],
    "data": Object {
      "value": Object {
        "document": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "span",
                  "value": "This
is a
title!",
                },
              ],
              "level": 1,
              "type": "heading",
            },
            Object {
              "code": "function greetings() {
  console.log('Hi!');
}",
              "highlight": Array [
                1,
              ],
              "language": "javascript",
              "type": "code",
            },
          ],
          "type": "root",
        },
        "schema": "dast",
      },
    },
    "hasOwnProperty": [Function],
    "metaTransformer": undefined,
    "renderBlock": undefined,
    "renderFragment": undefined,
    "renderInlineRecord": undefined,
    "renderLinkToRecord": undefined,
    "renderNode": undefined,
    "renderText": [Function],
  },
  "rootVM": Object {},
  "wrapperElement": <div>
    <h2>
      That!!
      <br>
        <!---->
      </br>
      is a!!
      <br>
        <!---->
      </br>
      title!!!
    </h2>
    <pre
      data-language="javascript"
    >
      <code>
        function greetings() {
  console.log('Hi!');
}!!
      </code>
    </pre>
  </div>,
}
`;

exports[`StructuredText simple dast with no links/blocks with default rules renders the document 1`] = `
VueWrapper {
  "__app": Object {
    "_component": Object {
      "__emits": null,
      "__props": Array [
        Object {},
        Array [],
      ],
      "name": "VTU_ROOT",
      "render": [Function],
    },
    "_container": <div
      data-v-app=""
    >
      <div>
        <h1>
          This
          <br>
            <!---->
          </br>
          is a
          <br>
            <!---->
          </br>
          title!
        </h1>
        <pre
          data-language="javascript"
        >
          <code>
            function greetings() {
  console.log('Hi!');
}
          </code>
        </pre>
      </div>
    </div>,
    "_context": Object {
      "app": [Circular],
      "components": Object {
        "transition": Object {
          "name": "transition",
          "props": undefined,
          "render": [Function],
        },
        "transition-group": Object {
          "name": "transition-group",
          "props": undefined,
          "render": [Function],
        },
      },
      "config": Object {
        "errorHandler": undefined,
        "globalProperties": Object {},
        "isCustomElement": [Function],
        "isNativeTag": [Function],
        "optionMergeStrategies": Object {},
        "performance": false,
        "warnHandler": undefined,
      },
      "directives": Object {},
      "mixins": Array [
        Object {
          "__emits": null,
          "__props": Array [],
          "beforeCreate": [Function],
        },
      ],
      "provides": Object {},
      "reload": [Function],
    },
    "_props": null,
    "_uid": 2,
    "component": [Function],
    "config": Object {
      "errorHandler": undefined,
      "globalProperties": Object {},
      "isCustomElement": [Function],
      "isNativeTag": [Function],
      "optionMergeStrategies": Object {},
      "performance": false,
      "warnHandler": undefined,
    },
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.0.11",
  },
  "__setProps": [Function],
  "componentVM": Object {
    "customRules": undefined,
    "data": Object {
      "value": Object {
        "document": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "span",
                  "value": "This
is a
title!",
                },
              ],
              "level": 1,
              "type": "heading",
            },
            Object {
              "code": "function greetings() {
  console.log('Hi!');
}",
              "highlight": Array [
                1,
              ],
              "language": "javascript",
              "type": "code",
            },
          ],
          "type": "root",
        },
        "schema": "dast",
      },
    },
    "hasOwnProperty": [Function],
    "metaTransformer": undefined,
    "renderBlock": undefined,
    "renderFragment": undefined,
    "renderInlineRecord": undefined,
    "renderLinkToRecord": undefined,
    "renderNode": undefined,
    "renderText": undefined,
  },
  "rootVM": Object {},
  "wrapperElement": <div>
    <h1>
      This
      <br>
        <!---->
      </br>
      is a
      <br>
        <!---->
      </br>
      title!
    </h1>
    <pre
      data-language="javascript"
    >
      <code>
        function greetings() {
  console.log('Hi!');
}
      </code>
    </pre>
  </div>,
}
`;

exports[`StructuredText with links/blocks with default rules renders the document 1`] = `
VueWrapper {
  "__app": Object {
    "_component": Object {
      "__emits": null,
      "__props": Array [
        Object {},
        Array [],
      ],
      "name": "VTU_ROOT",
      "render": [Function],
    },
    "_container": <div
      data-v-app=""
    >
      <div>
        <h1>
          This is a
          <mark>
            title
          </mark>
          <a
            href="/docs/how-to-code"
          >
            How to code
          </a>
          <a
            href="/docs/how-to-code"
            target="_blank"
          >
            here!
          </a>
        </h1>
        <figure>
          <blockquote>
            Foo bar.
          </blockquote>
          <figcaption>
            Mark Smith
          </figcaption>
        </figure>
      </div>
    </div>,
    "_context": Object {
      "app": [Circular],
      "components": Object {
        "transition": Object {
          "name": "transition",
          "props": undefined,
          "render": [Function],
        },
        "transition-group": Object {
          "name": "transition-group",
          "props": undefined,
          "render": [Function],
        },
      },
      "config": Object {
        "errorHandler": undefined,
        "globalProperties": Object {},
        "isCustomElement": [Function],
        "isNativeTag": [Function],
        "optionMergeStrategies": Object {},
        "performance": false,
        "warnHandler": undefined,
      },
      "directives": Object {},
      "mixins": Array [
        Object {
          "__emits": null,
          "__props": Array [],
          "beforeCreate": [Function],
        },
      ],
      "provides": Object {},
      "reload": [Function],
    },
    "_props": null,
    "_uid": 4,
    "component": [Function],
    "config": Object {
      "errorHandler": undefined,
      "globalProperties": Object {},
      "isCustomElement": [Function],
      "isNativeTag": [Function],
      "optionMergeStrategies": Object {},
      "performance": false,
      "warnHandler": undefined,
    },
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.0.11",
  },
  "__setProps": [Function],
  "componentVM": Object {
    "customRules": undefined,
    "data": Object {
      "blocks": Array [
        Object {
          "__typename": "QuoteRecord",
          "author": "Mark Smith",
          "id": "456",
          "quote": "Foo bar.",
        },
      ],
      "links": Array [
        Object {
          "__typename": "DocPageRecord",
          "id": "123",
          "slug": "how-to-code",
          "title": "How to code",
        },
      ],
      "value": Object {
        "document": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "span",
                  "value": "This is a",
                },
                Object {
                  "marks": Array [
                    "highlight",
                  ],
                  "type": "span",
                  "value": "title",
                },
                Object {
                  "item": "123",
                  "type": "inlineItem",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "span",
                      "value": "here!",
                    },
                  ],
                  "item": "123",
                  "meta": Array [
                    Object {
                      "id": "target",
                      "value": "_blank",
                    },
                  ],
                  "type": "itemLink",
                },
              ],
              "level": 1,
              "type": "heading",
            },
            Object {
              "item": "456",
              "type": "block",
            },
          ],
          "type": "root",
        },
        "schema": "dast",
      },
    },
    "hasOwnProperty": [Function],
    "metaTransformer": undefined,
    "renderBlock": [Function],
    "renderFragment": undefined,
    "renderInlineRecord": [Function],
    "renderLinkToRecord": [Function],
    "renderNode": undefined,
    "renderText": undefined,
  },
  "rootVM": Object {},
  "wrapperElement": <div>
    <h1>
      This is a
      <mark>
        title
      </mark>
      <a
        href="/docs/how-to-code"
      >
        How to code
      </a>
      <a
        href="/docs/how-to-code"
        target="_blank"
      >
        here!
      </a>
    </h1>
    <figure>
      <blockquote>
        Foo bar.
      </blockquote>
      <figcaption>
        Mark Smith
      </figcaption>
    </figure>
  </div>,
}
`;

exports[`StructuredText with no value renders null 1`] = `
VueWrapper {
  "__app": Object {
    "_component": Object {
      "__emits": null,
      "__props": Array [
        Object {},
        Array [],
      ],
      "name": "VTU_ROOT",
      "render": [Function],
    },
    "_container": <div
      data-v-app=""
    >
      <!---->
    </div>,
    "_context": Object {
      "app": [Circular],
      "components": Object {
        "transition": Object {
          "name": "transition",
          "props": undefined,
          "render": [Function],
        },
        "transition-group": Object {
          "name": "transition-group",
          "props": undefined,
          "render": [Function],
        },
      },
      "config": Object {
        "errorHandler": undefined,
        "globalProperties": Object {},
        "isCustomElement": [Function],
        "isNativeTag": [Function],
        "optionMergeStrategies": Object {},
        "performance": false,
        "warnHandler": undefined,
      },
      "directives": Object {},
      "mixins": Array [
        Object {
          "__emits": null,
          "__props": Array [],
          "beforeCreate": [Function],
        },
      ],
      "provides": Object {},
      "reload": [Function],
    },
    "_props": null,
    "_uid": 0,
    "component": [Function],
    "config": Object {
      "errorHandler": undefined,
      "globalProperties": Object {},
      "isCustomElement": [Function],
      "isNativeTag": [Function],
      "optionMergeStrategies": Object {},
      "performance": false,
      "warnHandler": undefined,
    },
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.0.11",
  },
  "__setProps": [Function],
  "componentVM": Object {
    "customRules": undefined,
    "data": null,
    "hasOwnProperty": [Function],
    "metaTransformer": undefined,
    "renderBlock": undefined,
    "renderFragment": undefined,
    "renderInlineRecord": undefined,
    "renderLinkToRecord": undefined,
    "renderNode": undefined,
    "renderText": undefined,
  },
  "rootVM": Object {},
  "wrapperElement": <!---->,
}
`;
